# IoTFlow_ConnectivityLayer

./: .env.example  .gitignore  INFLUXDB_INTEGRATION.md  INTEGRATION_COMPLETE.md  IOTDB_MIGRATION_COMPLETE.md  MANAGEMENT_GUIDE.md  MQTT_INTEGRATION.md  PHASE3_COMPLETE.md  POETRY.md  README.md  app.py  database_setup.sql  debug_user_creation.py  docker-compose.yml  docker-manage.sh  init_db.py  init_influxdb.py  manage.py  mqtt-ci.conf  mqtt_manage.sh  pyproject.toml  requirements.txt  simulate_devices.py  test.py  test_api.py  test_comprehensive.py  test_end_to_end.py  test_influxdb.py  test_influxdb_connection.py  test_mqtt.py  test_simple_telemetry.py  test_system_integration.py  verify_influxdb_data.py
.github/workflows/: python-app.yml  verify-iotdb.sh  (+1 more)
docs/: device_status_cache.md  esp32_registration_workflow.md  iotdb_integration.md
esp32-iotflow-client/: README.md  platformio.ini
esp32_examples/: README.md  esp32_mqtt_client.ino  platformio.ini
scripts/: check_device_data_flow.sh  check_iotdb_data.py  debug_redis_cache.py  docker_mosquitto_auth.sh  esp32_registration_test.py  fix_device_status_cache.py  fix_telemetry.py  monitor_device_data.py  monitor_mqtt.sh  mqtt_auth_generator.py  mqtt_ci_test.py  mqtt_test_client.py  retrieve_iotdb_data.py  send_device_command.py  test_device_status_cache.py  test_mqtt_status_update.py
simulators/: NEW_MQTT_SIMULATOR.md  README.md  basic_device_simulator.py  device_types.py  fleet_simulator.py  mqtt_device_simulator.py  mqtt_fleet_simulator.py  new_mqtt_device_simulator.py  simulate.py
tests/: test_end_to_end.py
(+38 files in other folders)
